--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/icons8-bank-16.png" />
+    <link rel="icon" type="image/png" sizes="48x48" href="/icons8-bank-48.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>New chat</title>
+    <title>OneTrust Bank - Your Trusted Financial Partner</title>
   </head>
   <body>
     <div id="root"></div>
