--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="/icons8-bank-16.png" />
     <link rel="icon" type="image/png" sizes="48x48" href="/icons8-bank-48.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>OneTrust Bank - Your Trusted Financial Partner</title>
+    <title>IBK 기업은행 - Your Trusted Financial Partner</title>
   </head>
   <body>
     <div id="root"></div>
