--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
     <link rel="icon" type="image/png" sizes="48x48" href="/icons8-bank-48.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>IBK 기업은행 - Your Trusted Financial Partner</title>
+    <script type="text/javascript">
+      var _smartsupp = _smartsupp || {};
+      _smartsupp.key = '967b6422344a441453e4ca46e08f1cd7c64224ce';
+      window.smartsupp||(function(d) {
+        var s,c,o=smartsupp=function(){ o._.push(arguments)};o._=[];
+        s=d.getElementsByTagName('script')[0];c=d.createElement('script');
+        c.type='text/javascript';c.charset='utf-8';c.async=true;
+        c.src='https://www.smartsuppchat.com/loader.js?';s.parentNode.insertBefore(c,s);
+      })(document);
+    </script>
   </head>
   <body>
     <div id="root"></div>
